--- a/package.json
+++ b/package.json
@@ -1,53 +1,52 @@
 {
-  "name": "myascoSite",
+  "name": "new-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.19.6",
-    "@types/node-sass": "^4.11.1",
-    "@types/react": "^16.14.2",
-    "@types/react-animate-on-scroll": "^2.1.2",
-    "@types/react-bootstrap": "^0.32.24",
-    "@types/react-dom": "^16.9.10",
-    "@types/react-input-mask": "^2.0.5",
-    "@types/react-redux": "^7.1.11",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/react-scroll": "^1.8.2",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
+    "@types/bootstrap": "^5.1.3",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^16.11.26",
+    "@types/node-sass": "^4.11.2",
+    "@types/react": "^17.0.41",
+    "@types/react-bootstrap": "^0.32.29",
+    "@types/react-dom": "^17.0.14",
+    "@types/react-input-mask": "^3.0.1",
+    "@types/react-redux": "^7.1.23",
+    "@types/react-router-dom": "^5.3npm run start.3",
+    "@types/react-scroll": "^1.8.3",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "animate.css": "^4.1.1",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "js-sha256": "^0.9.0",
-    "node-sass": "^4.14.1",
-    "react": "^17.0.1",
-    "react-animate-on-scroll": "^2.1.5",
-    "react-bootstrap": "^1.4.0",
-    "react-bootstrap-icons": "^1.4.0",
-    "react-dom": "^17.0.1",
-    "react-hook-form": "^7.1.0",
+    "react": "^17.0.2",
+    "react-animation-on-scroll": "^5.0.0",
+    "react-bootstrap": "^2.2.1",
+    "react-bootstrap-icons": "^1.7.2",
+    "react-dom": "^17.0.2",
     "react-input-mask": "^2.0.4",
-    "react-redux": "^7.2.2",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-scroll": "^1.8.1",
-    "react-select-search": "^3.0.7",
-    "react-snap": "^1.23.0",
-    "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0",
-    "swiper": "^6.4.6",
-    "typescript": "^4.1.2",
-    "web-vitals": "^0.2.4"
+    "react-redux": "^7.2.6",
+    "react-router": "^6.2.2",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "^5.0.0",
+    "react-scroll": "^1.8.6",
+    "react-select-search": "^3.0.9",
+    "react-snap": "^1.13.1",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "swiper": "^8.0.7",
+    "typescript": "^4.6.2",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "set \"GENERATE_SOURCEMAP=false\" &&  react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -68,5 +67,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.49.9"
   }
 }
