--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/react-dom": "^17.0.14",
     "@types/react-input-mask": "^3.0.1",
     "@types/react-redux": "^7.1.23",
-    "@types/react-router-dom": "^5.3npm run start.3",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-scroll": "^1.8.3",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
